<resources>
    <string name="app_name">AndroidFirebaseCRUD</string>
    <string name="already_a_member_login_here">Already a member? Login Here</string>
    <string name="sign_up">SIGN UP</string>
    <string name="i_agree_to_the_terms_of_service">I agree to the Terms of Service</string>
    <string name="email">Email</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">REGISTER</string>
    <string name="no_member_register_here">No member? Register Here</string>
    <string name="sign_in">SIGN IN</string>
    <string name="log_in">LOG IN</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="log_out">LOG OUT</string>
    <string name="update">Update</string>
</resources>
