<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/circle"
                        android:padding="10dp"
                        android:src="@drawable/img_register"
                        android:tint="@color/colorWhite" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/register"
                        android:textColor="@color/colorWhite"
                        android:textSize="22sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@+id/linearLayout1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-10dp"
                    android:rotation="45"
                    android:src="@drawable/square" />

                <RelativeLayout
                    android:id="@+id/relativeLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView1"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="30dp">

                    <ImageView
                        android:id="@+id/imgView_userIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/colorPrimary"
                        android:padding="8dp"
                        android:src="@drawable/img_user"
                        android:tint="@color/colorWhite" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/imgView_userIcon"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/imgView_userIcon"
                        android:background="@color/colorEditTextBG"
                        android:hint="@string/username"
                        android:id="@+id/username"
                        android:paddingStart="20dp"
                        android:textSize="15sp"
                        tools:ignore="RtlSymmetry" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/relativeLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayout1"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:id="@+id/imgView_passwordIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/colorPrimary"
                        android:padding="8dp"
                        android:src="@drawable/img_authentication"
                        android:tint="@color/colorWhite" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/imgView_passwordIcon"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/imgView_passwordIcon"
                        android:background="@color/colorEditTextBG"
                        android:hint="@string/password"
                        android:id="@+id/password"
                        android:inputType="textPassword"
                        android:paddingStart="20dp"
                        android:textSize="15sp"
                        tools:ignore="RtlSymmetry" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayout2"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:id="@+id/imgView_repasswordIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/colorPrimary"
                        android:padding="8dp"
                        android:src="@drawable/img_authentication"
                        android:tint="@color/colorWhite" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/imgView_repasswordIcon"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/imgView_repasswordIcon"
                        android:background="@color/colorEditTextBG"
                        android:hint="@string/re_type_password"
                        android:id="@+id/c_password"
                        android:inputType="textPassword"
                        android:paddingStart="20dp"
                        android:textSize="15sp"
                        tools:ignore="RtlSymmetry" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayout3"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:id="@+id/imgView_emailIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/colorPrimary"
                        android:padding="8dp"
                        android:src="@drawable/img_email"
                        android:tint="@color/colorWhite" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/imgView_emailIcon"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/imgView_emailIcon"
                        android:background="@color/colorEditTextBG"
                        android:hint="@string/email"
                        android:id="@+id/email"
                        android:paddingStart="20dp"
                        android:textSize="15sp"
                        tools:ignore="RtlSymmetry" />

                </RelativeLayout>

                <CheckBox
                    android:id="@+id/chkBox1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/relativeLayout4"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/i_agree_to_the_terms_of_service"
                    android:textColor="@color/ColorText" />

                <Button
                    android:id="@+id/btn_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/chkBox1"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorPrimary"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/sign_up"
                    android:onClick="SignUp"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_signUp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/colorTransparent"
                    android:fontFamily="sans-serif"
                    android:text="@string/already_a_member_login_here"
                    android:onClick="LogIn"
                    android:textAllCaps="false"
                    android:textColor="@color/ColorText"
                    android:textSize="13sp" />

            </RelativeLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/customSnac"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        tools:ignore="MissingConstraints">

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>